--- a/visual_studio/TDC_MANAGER_2/TDC_MANAGER_2.vcxproj.filters
+++ b/visual_studio/TDC_MANAGER_2/TDC_MANAGER_2.vcxproj.filters
@@ -30,12 +30,27 @@
     <ClInclude Include="tdcmanager_3.5.2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\gui.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\mathplot.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\tdc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TDC_MANAGER_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\gui.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\mathplot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
