attempting to start integrating wxwidgets in windows

--- a/visual_studio/TDC_MANAGER_2/global.cfg
+++ b/visual_studio/TDC_MANAGER_2/global.cfg
@@ -7,11 +7,17 @@
 # 		"GroupTimeout", "BufferSize", "DllTapAdjust:0", "DelayTap:0", "INL:0", "UseClock80",
 # 		"MMXEnable", "DMAEnable", "SSEEnable"
 
-
-GroupingEnable 1
-GroupRangeStart 209us
-GroupRangeEnd 209.7us
-TriggerDeadTime 0s
-BufferSize 19
+RisingEnable none
+FallingEnable 0-63
+TriggerChannel 5
+TriggerEdge falling
+GroupingEnable 0
+AllowOverlap 0
+GroupRangeStart 0s
+GroupRangeEnd 1ms
+TriggerDeadTime 2ms
+BufferSize 18
+OutputRollovers 1
+GroupTimeout 0s
 
 # asht
