--- a/macos/Makefile
+++ b/macos/Makefile
@@ -4,7 +4,8 @@ OBJ = ../obj/
 
 EXE_NAME = gui.exe
 
-OBJS = $(OBJ)heatmap.o $(OBJ)tdc.o $(OBJ)global.o $(OBJ)colormap.o
+OBJS = $(OBJ)heatmap.o $(OBJ)tdc.o $(OBJ)global.o $(OBJ)colormap.o $(OBJ)tabor.o
+
 
 DEFINES = -DUSE_GUI # -DUSE_TDC -DUSE_CARIBU
 WX_INCLUDE = `wx-config --cxxflags --libs`
