experimentation with tdc daq on windows

--- a/prototype/tdc_daq_mgr/global.cfg
+++ b/prototype/tdc_daq_mgr/global.cfg
@@ -6,21 +6,15 @@
 # 		"GroupRangeStart", "GroupRangeEnd", "ExternalClock", "OutputRollovers", "VHR", "UseFineINL",
 # 		"GroupTimeout", "BufferSize", "DllTapAdjust:0", "DelayTap:0", "INL:0", "UseClock80",
 # 		"MMXEnable", "DMAEnable", "SSEEnable"
-
-RisingEnable 0-63
+BufferSize 18
+RisingEnable none
 FallingEnable 0-63
-# FallingEnable none
-# RisingEnable 5
-# FallingEnable 5
-TriggerChannel 23
+TriggerChannel 6
 TriggerEdge rising
-GroupingEnable 0
+GroupingEnable 1
 AllowOverlap 0
 GroupRangeStart 0s
-GroupRangeEnd 2ms
-TriggerDeadTime 5ms
-BufferSize 18
-OutputRollovers 1
-GroupTimeout 0s
-
-# asht
+GroupRangeEnd 209us
+TriggerDeadTime 0.1s
+OutputRollovers 0
+GroupTimeout 0.0s
