--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-<<<<<<< HEAD
 *molecule_db.sql*
 *.egg-info
 *__pycache__
-=======
 *.opensdf
 *#
 *~
@@ -11,5 +9,4 @@
 */Debug/*
 */ipch/
 *.DS_Store
-*/test_storage/*
->>>>>>> cpt_master_controller/master
+# */test_storage/*
